--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ header, footer {
   display: flex;
   justify-content: space-between;
 }
+  footer {
+    margin-bottom: 3em;
+  }
 
 @media screen and (min-width: 640px) {
   header, main, footer { width: 60%; }
