--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ a {
   text-decoration: none;
   font-weight: bold;
 }
+  main a {
+    color: #800;
+    text-decoration: none;
+    font-weight: normal;
+  }
 
 code { font-weight: bold; }
 pre { overflow: overlay; }
