--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
   font-family: monospace;
+  scroll-behavior: smooth;
 }
 
 a {
