--- a/style.css
+++ b/style.css
@@ -42,5 +42,5 @@ header, footer {
   }
 
 @media screen and (min-width: 640px) {
-  header, main, footer { width: 60%; }
+  header, main, footer { width: 40em; }
 }
