CV generation script

--- a/template/post.html
+++ b/template/post.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="initial-scale=1">
 
   <title>tl;dw | Anqur</title>
-  <link rel="stylesheet" href="/scripts/style.css">
+  <link rel="stylesheet" href="/style/post.css">
   <link rel="stylesheet" href="/scripts/highlight.css">
 </head>
 
@@ -17,7 +17,9 @@
   </header>
 
   <main>
-    <article>{body}</article>
+    <article>
+      {body}
+    </article>
   </main>
 
   <footer>
