--- a/template/cv.html
+++ b/template/cv.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
 
-  <title>CV | Anqur</title>
+  <title>CV | Anqur Lu Xingyu</title>
   <link rel="stylesheet" href="/scripts/highlight.css">
   <link rel="stylesheet" href="/style/post.css">
   <link rel="stylesheet" href="/style/cv.css">
