--- a/template/post.html
+++ b/template/post.html
@@ -6,14 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
 
-  <title>tl;dw | Anqur</title>
+  <title>Internal Blog Theory | Anqur</title>
   <link rel="stylesheet" href="/style/post.css">
   <link rel="stylesheet" href="/scripts/highlight.css">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY" crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"
+    onload="renderMathInElement(document.body);"></script>
 </head>
 
 <body>
   <header>
-    <h1><a href="/">tl;dw</a></h1>
+    <h1><a href="/">Internal Blog Theory</a></h1>
   </header>
 
   <main>
@@ -23,14 +28,12 @@
   </main>
 
   <footer>
-    Too long, didn't write.
+    <p>
+      Report bugs, or you have better ideas:
+      <a href="//github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>.
+    </p>
+    <p>All posts follow the <code>cc-by-4.0</code> license.</p>
   </footer>
-
-  <script
-    type="text/javascript"
-    async
-    src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
 </body>
 
 </html>
