--- a/template/cv.html
+++ b/template/cv.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="initial-scale=1">
 
   <title>CV | Anqur Lu Xingyu</title>
-  <link rel="stylesheet" href="/scripts/highlight.css">
+  <link rel="stylesheet" href="/style/highlight.css">
   <link rel="stylesheet" href="/style/post.css">
   <link rel="stylesheet" href="/style/cv.css">
 </head>
