New post about storage
Signed-off-by: anqurvanillapy <anqurvanillapy@gmail.com>

--- a/template/post.html
+++ b/template/post.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="initial-scale=1">
 
-  <title>Internal Blog Theory | Anqur</title>
-  <link rel="stylesheet" href="/style/post.css">
-  <link rel="stylesheet" href="/style/highlight.css">
+    <title>Internal Blog Theory | Anqur</title>
+    <link rel="stylesheet" href="/style/post.css">
+    <link rel="stylesheet" href="/style/highlight.css">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY" crossorigin="anonymous"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"
-    onload="renderMathInElement(document.body);"></script>
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css"
+          integrity="sha384-wcIxkf4k558AjM3Yz3BBFQUbk/zgIYC2R0QpeeYb+TwlBVMrlgLqwRjRtGZiK7ww"
+          crossorigin="anonymous">
+    <script defer
+            src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.js"
+            integrity="sha384-hIoBPJpTUs74ddyc4bFZSM1TVlQDA60VBbJS0oA934VSz82sBx1X7kSx2ATBDIyd"
+            crossorigin="anonymous"></script>
+    <script defer
+            src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/contrib/auto-render.min.js"
+            integrity="sha384-43gviWU0YVjaDtb/GhzOouOXtZMP/7XUzwPTstBeZFe/+rCMvRwr4yROQP43s0Xk"
+            crossorigin="anonymous"
+            onload="renderMathInElement(document.body);"></script>
 </head>
 
 <body>
-  <header>
+<header>
     <h1><a href="/">Internal Blog Theory</a></h1>
-  </header>
+</header>
 
-  <main>
+<main>
     <article>
-      {body}
+        {body}
     </article>
-  </main>
+</main>
 
-  <footer>
+<footer>
     <p>
-      Report bugs, or you have better ideas:
-      <a href="//github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>.
+        Report bugs, or you have better ideas:
+        <a href="//github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>.
     </p>
     <p>All posts follow the <code>cc-by-4.0</code> license.</p>
-  </footer>
+</footer>
 </body>
 
 </html>
