--- a/template/cv.html
+++ b/template/cv.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="initial-scale=1">
 
-  <title>CV | Anqur Lu Xingyu</title>
-  <link rel="stylesheet" href="/style/highlight.css">
-  <link rel="stylesheet" href="/style/post.css">
-  <link rel="stylesheet" href="/style/cv.css">
+    <title>CV | Anqur Lu Xingyu</title>
+    <link rel="stylesheet" href="/style/highlight.css">
+    <link rel="stylesheet" href="/style/post.css">
+    <link rel="stylesheet" href="/style/cv.css">
 </head>
 
 <body>
-  <main>
+<main>
     <article>
-      {body}
+        {body}
     </article>
-  </main>
+</main>
 </body>
 
 </html>
