--- a/template/post.html
+++ b/template/post.html
@@ -39,7 +39,7 @@
 <footer>
     <p>
         Report bugs, or you have better ideas:
-        <a href="//github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>.
+        <a href="//github.com/anqur/anqur.github.io/issues">Issues</a>.
     </p>
     <p>All posts follow the <code>cc-by-4.0</code> license.</p>
 </footer>
